gallary text overflow fixed

--- a/css/thumbnail-gallery.css
+++ b/css/thumbnail-gallery.css
@@ -84,3 +84,9 @@
     padding: 0;
 }
 }
+@media(max-width: 500px) {
+
+.tz-gallery .caption {
+    height: auto;
+}
+}
